Webpack now works yay.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 *.idea/
 
+
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
@@ -50,6 +52,8 @@ fabric.properties
 __pycache__/
 *.py[cod]
 *$py.class
+
+static/chess.js
 
 # C extensions
 *.so
