--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
     "babel-preset-react": "^6.16.0",
     "webpack": "^1.13.3"
   }
